SP Screen ResDev (Partial)/src/objects/Custom_Service_Call__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point_Url__c</fullName>
        <label>End Point Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password_With_Token__c</fullName>
        <label>Password With Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Service Call</label>
</CustomObject>